--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 
 h2{
-    color: #8a791d
+    color: #8a791d;
 }
 body{
     background-color: black;
 }
 
 h1{
-    color:#8a791d
+    color:#8a791d;
 
 }
 
@@ -38,5 +38,6 @@ h3{
   background-color: #53350d;
   color: white;
 }
+
 
 
